Added instructions on use.

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ input[type="color"]::-webkit-color-swatch {
 #container {
     margin: 1em;
     flex-wrap: wrap;
-    border: black 2px solid;
+    border: black 3px solid;
     gap: 0px;
     height: 450px;
     width: 450px;
@@ -64,6 +64,14 @@ input[type="color"]::-webkit-color-swatch {
     align-self: center;
     font-size: 1.4em;
     margin: 20px 5px 0px 0px;
+}
+
+#clear {
+    margin-top: 0px;
+}
+
+#info {
+    margin-top: 1em;
 }
 
 .box {
